# web-framework-rust

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  about.json  users.json
.github/: docker-build.yml
.github/workflows/: ci.yml
blogs/: blog1.md  blog2.md  blogs.md  blogs3.md
src/: auth.rs  blog_helpers.rs  main.rs
src/templates/: index.html
templates/: 404.html.hbs  500.html.hbs  about.html.hbs  blogs.html.hbs  home.html.hbs  index.html.hbs  login.html.hbs  signup.html.hbs
templates/partials/: navbar.html.hbs
