[package]
name = "rust-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
async-std = "1.10.0"  # Add the async-std dependency
lazy_static = "1.4.0"  # Add the lazy_static dependency
serde_json="1"
pulldown-cmark = { version = "0.9.2", default-features = false }

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["handlebars", "tera"]
